# preemptive-threads

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_OLD.md  benchmark_results.md  fix_errors.sh  package-lock.json  test_runner.sh
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: thread_benchmark.rs
docs/: PERFORMANCE_TUNING.md
docs/architecture/: arm64.md  riscv64.md  x86_64.md
examples/: basic_threading.rs  kernel_simulation.rs  performance_test.rs  platform_timer_demo.rs  producer_consumer.rs  safe_threading.rs  scheduler_config.rs  security_hardened.rs  simple_threads.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: memory_management.rs  thread_lifecycle.rs
src/: atomic_scheduler.rs  context.rs  context_full.rs  error.rs  errors.rs  kernel.rs  lib.rs  platform_timer.rs  preemption.rs  safe_api.rs  safe_tests.rs  scheduler.rs  signal_safe.rs  stack_guard.rs  sync.rs  tests.rs  thread.rs
src/arch/: aarch64.rs  barriers.rs  detection.rs  mod.rs  riscv.rs  riscv64.rs  x86_64.rs
src/mem/: arc_lite.rs  epoch.rs  hazard.rs  mod.rs  race_detector.rs  stack_pool.rs
src/observability/: health.rs  metrics.rs  mod.rs  profiler.rs  resource_limits.rs
src/perf/: cache_aware.rs  context_switch_opt.rs  cpu_dispatch.rs  fast_paths.rs  memory_pools.rs  mod.rs  numa.rs
src/sched/: mod.rs  rr.rs  trait_def.rs  worksteal.rs
src/security/: aslr.rs  audit.rs  cfi.rs  crypto_rng.rs  isolation.rs  mod.rs  stack_protection.rs
src/tests/: helpers.rs  integration.rs  mod.rs  performance.rs  property.rs  stress.rs  unit.rs
src/thread_new/: builder.rs  handle.rs  mod.rs
src/time/: mod.rs  tick.rs  timer.rs  x86_64_timer.rs
tests/: smoke_tests.rs  stress_tests.rs
