[package]
name = "preemptive-threads-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "thread_lifecycle"
path = "fuzz_targets/thread_lifecycle.rs"
test = false
doc = false

[[bin]]
name = "scheduler_ops"
path = "fuzz_targets/scheduler_ops.rs"
test = false
doc = false

[[bin]]
name = "memory_management"
path = "fuzz_targets/memory_management.rs"
test = false
doc = false

[[bin]]
name = "channel_ops"
path = "fuzz_targets/channel_ops.rs"
test = false
doc = false

[[bin]]
name = "sync_primitives"
path = "fuzz_targets/sync_primitives.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
preemptive-threads = { path = "..", features = ["std"] }

[dependencies.arbitrary]
version = "1.0"
features = ["derive"]